test/tests/stages/5_local_variables/valid/extra_credit/bitwise_in_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(15)
  ;
  int
  identifier(b)
  =
  identifier(a)
  ^
  const int(5)
  ;
  return
  const int(1)
  |
  identifier(b)
  ;
  }
