test/tests/stages/5_local_variables/invalid_parse/invalid_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  int
  identifier(main)
  (
  void
  )
  {
  identifier(ints)
  identifier(a)
  =
  const int(1)
  ;
  return
  identifier(a)
  ;
  }
